--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "jest"
+    "test": "jest",
+    "start-dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,6 +32,7 @@
     "@types/jest": "^25.1.4",
     "jest": "^25.1.0",
     "prettier": "^2.0.2",
+    "nodemon": "^2.0.4",
     "ts-jest": "^25.2.1",
     "mongodb-memory-server": "^6.5.2"
   }
